--- a/syllabus/syllabus.Rmd
+++ b/syllabus/syllabus.Rmd
@@ -25,7 +25,7 @@ Insert textbook here
 \vskip.25in
 
 \noindent\textbf{Learning Outcome:} 
-Students will become good data stewards through learning new tools to clearl organize, track, and communicate data-based work from data collection through publication.  This will facilitate strong teamwork skills and enable subsequent researchers to reproduce or expand upon completed projects.   
+Students will become good data stewards through learning new tools to clearly organize, track, and communicate data-based work from data collection through publication.  This will facilitate strong teamwork skills and enable subsequent researchers to reproduce or expand upon completed projects.   
 \vskip.25in
 
 \noindent\textbf{Course Outline:} 
