--- a/syllabus/syllabus-template.tex
+++ b/syllabus/syllabus-template.tex
@@ -5,6 +5,9 @@ $if(tables)$
 \usepackage{longtable,booktabs}
 $endif$
 
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \textwidth=7in
 \textheight=9.5in
 \topmargin=-1in
