added format and frequency

--- a/syllabus/syllabus-template.tex
+++ b/syllabus/syllabus-template.tex
@@ -37,6 +37,9 @@ $endif$
 \renewcommand{\arraystretch}{2}
  
 \vskip.25in
+\noindent\textbf{Proposed Frequency:} $proposed$
+ 
+\vskip.25in
 \noindent\textbf{Class Time:} $time$ in $room$
 
 
