small updates to syllabus

--- a/syllabus/syllabus-template.tex
+++ b/syllabus/syllabus-template.tex
@@ -43,7 +43,7 @@ $endif$
 \noindent\textbf{Class Time:} $time$ in $room$
 
 
-\noindent\textbf{Instructor:} $for(instructor)$ $instructor.name$ ($instructor.email$, $instructor.office$, $instructor.phone$)$sep$, $endfor$
+\noindent\textbf{Instructor:} $for(instructor)$ $instructor.name$ ($instructor.email$, $instructor.office$)$sep$, $endfor$
 
 $for(ta)$
 \noindent\textbf{TA:} $ta.name$ ($ta.office$)
