Interesting tools updated

--- a/admin/Notes.Rmd
+++ b/admin/Notes.Rmd
@@ -10,7 +10,9 @@ output:
 [mine-cetinkaya-rundel](https://github.com/mine-cetinkaya-rundel/2016-06-27-first-ds-course-user)  
 [cbahlai](https://github.com/cbahlai/OSRR_course)
 
-####Interesting tools
+####Interesting tools  
+[Atlassian](https://www.atlassian.com/software/sourcetree)  
+Werker
 
 
 ####Great blogs/tutorials  
