general thoughts section

--- a/admin/Notes.Rmd
+++ b/admin/Notes.Rmd
@@ -24,3 +24,9 @@ output:
 * Awareness of the online community
 * Keeping track of the language they are learning
 
+####Thoughts
+* Make more detailed course outline
+* Week one assignment
+* Another recruitment email
+* Venn diagram
+
