--- a/Week 01/course_intro/Intro presentation.Rmd
+++ b/Week 01/course_intro/Intro presentation.Rmd
@@ -21,19 +21,28 @@ output:
 
 [//]:But more seriously, the title of this course is Data Stewardship, so what we really want you to become are model citizens of science. Since most of us work in Earth Systems, we are probably all familiar with the concept of land stewardship. A person may own a piece of land and may pour their own blood, sweat, and tears into making something of it, but in the end the land is passed to some one else and what they are able to do with that land has already been determined by the person that came before them. If the previous owner treated the land poorly, there will not be much anyone can do without a whole lot of work and investment.  If the previous owner was a good steward, there will be a lot more possibilities of what the land can produce. The same is true for your data. You may feel like all the work you do means that you own your data, but in the end, it will go out into the world and your level of stewardship will determine how much people can do with it. No one can really own data.   
 
+##A few reasons data stewardship is important
+ * A solid data management plan is now required by federal agencies (NSF, NIFA)
+    + Includes requirements for data storage, preservation, sharing, and public access
+ * Good stewardship will make you more efficient, faster, and powerful
+    + Be kind to your future self
+ * The most will be made of data that took a lot of time and money to collect
+ 
 ##How to be a good data steward
  * Work in a style that encourages others to understand and reproduce what you did
  * Document every step of the process
  * Do not misplace or destroy your data
  
- Stewardship may seem altruistic, but the person to benefit the most will be you. Your future self will thank you.
-
-##Don't forget
- * Reproducibility/Accountability
- * Collaboration
- * Data sharing with the world
- * Required databases/data tracking (NSF/NIFA)
- * Personal efficiency  
+ Many of us need new skills to be better stewards.
+ 
+##Learning curve and time
+  * Learning new skills is not easy
+     + open mind
+     + **patience**
+     + determination
+     + committment
+  * Invest time now to save time later
+  
  
  
 ##New worlds 
@@ -45,12 +54,17 @@ output:
  * Course outline  
 
 ##Homeworks
- *All GitHub
+ * All GitHub
 
-##Course Project
- 
- 
+##Course Project  
+
+##Getting Help  
+
 ##Introductions?
+
+##What you need on your computer
+
+
  
 
 
