--- a/Week 01/course_intro/Intro presentation.Rmd
+++ b/Week 01/course_intro/Intro presentation.Rmd
@@ -8,20 +8,24 @@ output:
     katex: true
     theme: ribbon
 ---
+
+# Welcome to Data Stewardship for Earth Systems Scientists
 [//]:One thing you can expect from this course is the use of comics, cliches, and cultural references
 [//]:I know will be the only exposure to culture for some of you
 
 [//]:For example, they say you can lead a horse to water, but you can't make it drink and people often use this metaphor in teaching. But it's not true.
 
 ## You *can* make a horse drink
-![](images/drinkinghorse.gif)
+[//]:![](images/drinkinghorse.gif)
+<center><img src="images/drinkinghorse.gif"/></center>
 
 ## But there are better ways to treat a horse
-![](images/happyhorse.gif) 
+[//]:![](images/happyhorse.gif) 
+<center><img src="images/happyhorse.gif"/></center>
 
 [//]:But more seriously, the title of this course is Data Stewardship, so what we really want you to become are model citizens of science. Since most of us work in Earth Systems, we are probably all familiar with the concept of land stewardship. A person may own a piece of land and may pour their own blood, sweat, and tears into making something of it, but in the end the land is passed to some one else and what they are able to do with that land has already been determined by the person that came before them. If the previous owner treated the land poorly, there will not be much anyone can do without a whole lot of work and investment.  If the previous owner was a good steward, there will be a lot more possibilities of what the land can produce. The same is true for your data. You may feel like all the work you do means that you own your data, but in the end, it will go out into the world and your level of stewardship will determine how much people can do with it. No one can really own data.   
 
-##A few reasons data stewardship is important
+##A few reasons data stewardship is important 
  * A solid data management plan is now required by federal agencies (NSF, NIFA)
     + Includes requirements for data storage, preservation, sharing, and public access
  * Good stewardship will make you more efficient, faster, and powerful
@@ -34,7 +38,7 @@ output:
  * Document every step of the process
  * Do not misplace or destroy your data
  
-Many of us need new skills to be better stewards.
+Many of us need new skills to be better stewards. Some of us need a lifestyle change.
  
 ##Learning curve and time
   * Learning new skills is not easy
@@ -55,7 +59,7 @@ Many of us need new skills to be better stewards.
  
 ##Live in new worlds, but visit the old 
  [//]:* ![](images/worldscollide.png)
- <img src="images/worldscollide.png" width="600px" /> 
+ <center><img src="images/worldscollide.png" width="700px" /></center>
  
 ##Homeworks
  * All homeworks will be submitted on GitHub and must be fully reproducible by the instructors
@@ -75,13 +79,15 @@ The final project will integrate everything from class.
 1. The internet
   + StackOverflow
   + Google
-2. Instructors via GitHub  
+1. Instructors via GitHub  
 
-##Introductions?
+##Who is here?
+
+##RStudio and Rmarkdown
 
 ##Pre-course evaluation
 
-##The computer situation
+
 
  
 
