Added content from broman plus data collection

--- a/Week 00/admin/Notes.Rmd
+++ b/Week 00/admin/Notes.Rmd
@@ -26,7 +26,11 @@ Find style guides -- R, SQL
 [5 Reasons Why to Learn Reproducibility](http://chance.amstat.org/2014/09/reproducible-paradigm/)  
 [Raw data organization](http://kbroman.org/dataorg/)  
 [Steps to reproducible research](http://kbroman.org/steps2rr/)  
-[Markdown for scientists](https://github.com/karthik/markdown_science)  
+[Markdown for scientists](https://github.com/karthik/markdown_science)
+[Spreadsheets!!!](https://github.com/jennybc/2016-06_spreadsheets)
+[Filenames](https://rawgit.com/Reproducible-Science-Curriculum/rr-organization1/master/organization-01-slides.html#28)  
+
+
 
 
 
