--- a/Week 00/admin/Notes.Rmd
+++ b/Week 00/admin/Notes.Rmd
@@ -40,6 +40,7 @@ Find style guides -- R, SQL
 * Writing reproducible questions
 * Awareness of the online community
 * Keeping track of the language they are learning
+* Conversions 
 
 ####Thoughts
 * **Make more detailed course outline**
